test/spec_vectors/call/fail/module_4.wat
(module (func $arity-0-vs-2 (call 1)) (func (param f64 i32)))